<resources>
    <string name="app_name">GHS special</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="title_activity_hymn">Hymn</string>
    <string name="title_activity_settings">My Settings</string>


    <string name="pref_title_font_size">Choose Font Size</string>


    <string name="pref_title_theme_mode">Time Based Theme</string>
    <string name="pref_title_theme_color">Color For Theme</string>

    <string name="summary_about">this app is just for you.. to enjoy.</string>
    <string name="app_version"> 1.0</string>
    <string name="title_version">Version</string>
    <string name="summary_support">\@ JesusMe  2017</string>
    <string name="title_send_feedback">CopyRight</string>
    <string name="themechangeMode">themeChange</string>
    <string name="themechangeColor">themeColor</string>

    <string name="fontSizeChangeName">fontSize</string>
    <string name="aboutUs"><b>Gospel Hymns and Songs</b> \n <i>Special Edition</i> \n Designed to give a little bit of flavour to our wonderful GHS and make you like using it . \n Use to the glory of God… \n \n\n <b>Designed By:</b> \n Orji Ikechukwu (jojitoon) …
    \n In honour of <b>The Glorious Generation</b> \n (DLCF FUTO) 2011/2012 \n Led by our Leader : Bro. Emmanuel O. \n I love you all … \n Also thanks to all
    Members of Deeper life for their support. \n\n\n <b>For supports and Enquiries :</b>\n <b>Call:</b> 07060926994 \n <b>Email:</b> jojitoon@gmail.com . \n \nGod Bless you</string>
    <string name="title_activity_about_help">AboutHelp</string>
    <string name="action_exit">Exit</string>
    <string name="alarm_service_label">Service Day</string>
    <string name="howToUse">Use the search in the floating action bar to search by number   \n To get the alphabetical Index sort with (A -Z) icon while the other for numerical</string>
    <string name="howToUse1">Use the search above at the appbar to search by any means you wish to search: title, phrases or words </string>
    <string name="howToUse2"> Change between day and night mode \n Also to change your theme and font size of  hymn.  </string>
    <string name="howToUse3">Through the content tab you can access hymn from their content type \n. ..Enjoy</string>

</resources>
