<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.jojitoon.jesusme.ghsspecial.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/action_help"
        app:showAsAction="ifRoom" />
    <item
    android:id="@+id/action_about"
    android:orderInCategory="100"
    android:title="@string/action_about"
    app:showAsAction="never" />
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:title="@string/action_exit"
        app:showAsAction="never" />

</menu>
